Don't auto scroll i.e. mobile, fix z-index problem with mobile navigation and autocomplete, fix possible overflow of holdings deduce select dropdown

--- a/themes/finna/less/bootstrap.less
+++ b/themes/finna/less/bootstrap.less
@@ -1705,7 +1705,7 @@ ul.jstree-container-ul > li.jstree-node, .list-group.facet .list-group-item:not(
     .mobile-navigation {
         .mobile-toolbar();
         left: 0;
-        z-index: 11;
+        z-index: 60;
         & i {
             font-size: 15px;
             vertical-align: -2px;
