--- a/themes/finna/less/bootstrap/finna/holdings.less
+++ b/themes/finna/less/bootstrap/finna/holdings.less
@@ -14,6 +14,7 @@
     & .dedupInformation {
         float: left;
         margin-right: 10px;
+        max-width: 100%;
     }
     & .holdings, .holdings-container, .no-holdings, .availability-load-indicator {
         clear: both;
@@ -55,6 +56,9 @@
     overflow: hidden;
     white-space: nowrap;
     margin-left: 15px;
+}
+.dedup-select {
+    max-width: 100%;
 }
 
 // Record view holdings styles
